--- a/css/style.css
+++ b/css/style.css
@@ -1,71 +1,76 @@
-html {
-    font-family: 'Krona One', sans-serif;
+@keyframes fadeIn{
+    from{opacity: 0; transform: rotateY(-100);}
+    to{opacity:1; transform: rotateY(0);}
 }
-body{
-    background-image: radial-gradient(darkcyan, black);
-    /*background-image: url(../img/proxy_night.png);*/
-    background-repeat: no-repeat;
-    height: auto;
+
+header{
+    position:fixed;
+    left: 0px;
+    right: 0px;
+    background: white;
+    box-shadow: 0px 0px 10px;
+    top: 0px;
 }
-#img_display{
-    display: flex;
-    flex-wrap: wrap;
+nav {
+    display: inline-flex;
+    width: 100%;
 }
-.gallery-pic{
-    background-size: cover;
-    width: 25%;
-    margin: 20px;
-    border-radius: 10px;
-    border-style: solid;
-    border-width: 5px;
-    border-color: white;
-    box-shadow: 0px 0px 20px;
+.header-title{
+    float: left;
+    padding: 0px 25px;
 }
-    .gallery-pic:hover{
-        transition: 0.1s;
-        box-shadow: 0px 0px 20px white;
-    }
-    .gallery-pic:active{
-        border-width: 2px;
-    }
-.container{
-    border-radius: 10px;
-    margin: 10vh 0px;
-    padding: 30px 100px;
-    height: auto;
-    background-image: radial-gradient(white, gray);
+.header-buttons{
 }
-.title {
+.nav-button{
+    background-color: white;
     color: black;
-    text-align: center;
-}
-#dl_button{
+    font-weight: bold;
+    display: inline-flex;
+    padding: 25px;
     text-decoration: none;
-    text-align: center;
-
-    background-color: gray;
-    border-radius: 5px;
-    box-shadow: 0px 0px 2px;
-    transition: background-color 0.1s;
-
-    margin: 10px;
-    padding: 10px;
 }
-    #dl_button:hover{
-        background-color: white;
-        box-shadow: 0px 0px 0px;
-    }
-    #dl_button:active{
-        background-color: darkgray;
-        color: white;
-        text-shadow: 0px 0px 10px;
-        box-shadow: 0px 0px 5px black;
-    }
+.nav-button:hover{
+    transition: border-bottom 0.1s;
+    transition: background-color 0.1s;
+    background-color: pink;
+    border-bottom: magenta solid;
+}
+.nav-button:active{
 
-#progress_board, h2, iframe
-{
-    display: flex;
-    flex-direction: column;
+}
+
+body{
+    font-family: 'Ubuntu', sans-serif;
+}
+.content{
+    padding: 75px 25px;
+    animation: fadeIn 1s;
+}
+
+footer{
+    background: white;
+    position: fixed;
+    padding: 0px 25px;
+    left: 0px;
+    right: 0px;
+    box-shadow: 0px 0px 10px;
+    bottom: 0px;
+}
+
+/* extra stuff */
+
+.centered{
     justify-content: center;
-    margin: 25px auto;
+    text-align: center;
+}
+
+#maintenance-center{
+    justify-content: center;
+    text-align: left;
+}
+#maintenance-guy{
+    transform: scaleX(1);
+}
+#maintenance-guy:hover{
+    transform: scaleX(-1);
 }
