--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @keyframes fadeIn{
-    from{opacity: 0; transform: rotateY(-100);}
-    to{opacity:1; transform: rotateY(0);}
+    from{opacity: 0; transform: translateX(100%);}
+    to{opacity:1; transform: translateY(0px);}
 }
 
 header{
@@ -45,6 +45,13 @@ body{
 .content{
     padding: 75px 25px;
     animation: fadeIn 1s;
+}
+.art-content {
+    display: flex;
+    flex-wrap: wrap;
+}
+.art-item{
+    height: 1%;
 }
 
 footer{
