--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,15 @@ header{
 }
 nav {
     display: inline-flex;
+    justify-content: space-around;
     width: 100%;
 }
 .header-title{
-    float: left;
-    padding: 0px 25px;
 }
 .header-buttons{
+}
+#menu-button{
+    display: none;
 }
 .nav-button{
     background-color: white;
@@ -36,7 +38,7 @@ nav {
     border-bottom: magenta solid;
 }
 .nav-button:active{
-
+    background-color: white;
 }
 
 body{
@@ -87,4 +89,23 @@ footer{
 }
 #maintenance-guy:hover{
     transform: scaleX(-1);
+}
+
+@media (max-width: 760px){
+    .remove{display:none;}
+    .header-title{text-align: center;}
+    nav{
+        flex-direction: column;
+    }
+    #menu-button{
+        display: flex;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+    .nav-button{
+        padding: 5px auto;
+        display: block;
+        text-align: center;
+    }
 }
