--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
     to{opacity:1; transform: translateY(0px);}
 }
 
+body{
+    margin: 0px;
+    padding: 0px;
+}
+
 header{
     position:fixed;
     left: 0px;
@@ -61,13 +66,17 @@ body{
 }
 
 footer{
+    display: flex;
+    justify-content: space-between;
     background: white;
     position: fixed;
-    padding: 0px 25px;
     left: 0px;
     right: 0px;
     box-shadow: 0px 0px 10px;
     bottom: 0px;
+}
+footer p{
+    margin: auto 25px;
 }
 
 /* extra stuff */
@@ -75,6 +84,11 @@ footer{
 .centered{
     justify-content: center;
     text-align: center;
+}
+
+.inline{
+    display: flex;
+    justify-content: space-between;
 }
 
 .button{
