--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
     margin: 0px;
     padding: 0px;
 }
-#thirdym-site{color: white;}
+#thirdym-site{color:white;}
 
 header{
     position:fixed;
@@ -61,9 +61,18 @@ body{
 .art-content {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 .art-item{
-    
+    transition: box-shadow .1s;
+    transition: max-width .1s;
+    object-fit: contain;
+    max-width: 20%;
+}
+.art-item:hover{
+    box-shadow: 0px 10px 10px black;
+    max-width: 30%;
+    z-index: 1;
 }
 
 footer{
