--- a/css/style.css
+++ b/css/style.css
@@ -67,12 +67,11 @@ body{
     transition: box-shadow .1s;
     transition: max-width .1s;
     object-fit: contain;
-    max-width: 20%;
+    max-width: 20vw;
 }
 .art-item:hover{
     box-shadow: 0px 10px 10px black;
     max-width: 30%;
-    z-index: 1;
 }
 
 footer{
@@ -120,6 +119,8 @@ footer p{
     .inline{ flex-direction: column;}
     .remove{display:none;}
     .header-title{text-align: center;}
+    .art-item{max-width: 75%;}
+    .art-item:hover{max-width: 100%;}
     nav{
         flex-direction: column;
     }
